src/libui/libui.cr


    fun control_destroy = uiControlDestroy(c : Pointer(Void))
    fun control_handle = uiControlHandle(c : Pointer(Void))
    fun control_parent = uiControlParent(c : Pointer(Void)) : Pointer(Void)
    fun control_set_parent = uiControlSetParent(c : Pointer(Void), parent : Pointer(Void))
    fun control_toplevel = uiControlToplevel(c : Pointer(Void)) : LibC::Int
    fun control_visible = uiControlVisible(c : Pointer(Void)) : LibC::Int
    fun control_show = uiControlShow(c : Pointer(Void))
    fun control_hide = uiControlHide(c : Pointer(Void))
    fun control_enabled = uiControlEnabled(c : Pointer(Void)) : LibC::Int
    fun control_enable = uiControlEnable(c : Pointer(Void))
    fun control_disable = uiControlDisable(c : Pointer(Void))
    fun alloc_control = uiAllocControl(n : LibC::SizeT, o_ssig : LibC::Int, typesig : LibC::Int, typenamestr : Pointer(LibC::Char)) : Pointer(Void)
    fun free_control = uiFreeControl(c : Pointer(Void))
    fun control_verify_set_parent = uiControlVerifySetParent(c : Pointer(Void), parent : Pointer(Void))
    fun control_enabled_to_user = uiControlEnabledToUser(c : Pointer(Void)) : LibC::Int
    fun user_bug_cannot_set_parent_on_toplevel = uiUserBugCannotSetParentOnToplevel(type : Pointer(LibC::Char))
    alias Window = Void
    fun window_title = uiWindowTitle(w : Pointer(Void)) : Pointer(LibC::Char)
    fun window_set_title = uiWindowSetTitle(w : Pointer(Void), title : Pointer(LibC::Char))
    fun window_position = uiWindowPosition(w : Pointer(Void), x : Pointer(LibC::Int), y : Pointer(LibC::Int))
    fun window_set_position = uiWindowSetPosition(w : Pointer(Void), x : LibC::Int, y : LibC::Int)
    fun window_on_position_changed = uiWindowOnPositionChanged(w : Pointer(Void), f : (Pointer(Void), Pointer(Void) -> Void), data : Pointer(Void))
    fun window_content_size = uiWindowContentSize(w : Pointer(Void), width : Pointer(LibC::Int), height : Pointer(LibC::Int))
    fun window_set_content_size = uiWindowSetContentSize(w : Pointer(Void), width : LibC::Int, height : LibC::Int)
    fun window_fullscreen = uiWindowFullscreen(w : Pointer(Void)) : LibC::Int
    fun window_set_fullscreen = uiWindowSetFullscreen(w : Pointer(Void), fullscreen : LibC::Int)
    fun window_on_content_size_changed = uiWindowOnContentSizeChanged(w : Pointer(Void), f : (Pointer(Void), Pointer(Void) -> Void), data : Pointer(Void))
    fun window_on_closing = uiWindowOnClosing(w : Pointer(Void), f : (Pointer(Void), Pointer(Void) -> LibC::Int), data : Pointer(Void))
    fun window_on_focus_changed = uiWindowOnFocusChanged(w : Pointer(Void), f : (Pointer(Void), Pointer(Void) -> Void), data : Pointer(Void))
    fun window_focused = uiWindowFocused(w : Pointer(Void)) : LibC::Int
    fun window_borderless = uiWindowBorderless(w : Pointer(Void)) : LibC::Int
    fun window_set_borderless = uiWindowSetBorderless(w : Pointer(Void), borderless : LibC::Int)
    fun window_set_child = uiWindowSetChild(w : Pointer(Void), child : Pointer(Void))
    fun window_margined = uiWindowMargined(w : Pointer(Void)) : LibC::Int
    fun window_set_margined = uiWindowSetMargined(w : Pointer(Void), margined : LibC::Int)
    fun window_resizeable = uiWindowResizeable(w : Pointer(Void)) : LibC::Int
    fun window_set_resizeable = uiWindowSetResizeable(w : Pointer(Void), resizeable : LibC::Int)
    fun new_window = uiNewWindow(title : Pointer(LibC::Char), width : LibC::Int, height : LibC::Int, has_menubar : LibC::Int) : Pointer(Void)
    alias Button = Void
    fun button_text = uiButtonText(b : Pointer(Void)) : Pointer(LibC::Char)
    fun button_set_text = uiButtonSetText(b : Pointer(Void), text : Pointer(LibC::Char))
    fun button_on_clicked = uiButtonOnClicked(b : Pointer(Void), f : (Pointer(Void), Pointer(Void) -> Void), data : Pointer(Void))
    fun new_button = uiNewButton(text : Pointer(LibC::Char)) : Pointer(Void)
    alias Box = Void
    fun box_append = uiBoxAppend(b : Pointer(Void), child : Pointer(Void), stretchy : LibC::Int)
    fun box_num_children = uiBoxNumChildren(b : Pointer(Void)) : LibC::Int
    fun box_delete = uiBoxDelete(b : Pointer(Void), index : LibC::Int)
    fun box_padded = uiBoxPadded(b : Pointer(Void)) : LibC::Int
    fun box_set_padded = uiBoxSetPadded(b : Pointer(Void), padded : LibC::Int)
    fun new_horizontal_box = uiNewHorizontalBox : Pointer(Void)
    fun new_vertical_box = uiNewVerticalBox : Pointer(Void)
    alias Checkbox = Void
    fun checkbox_text = uiCheckboxText(c : Pointer(Void)) : Pointer(LibC::Char)
    fun checkbox_set_text = uiCheckboxSetText(c : Pointer(Void), text : Pointer(LibC::Char))
    fun checkbox_on_toggled = uiCheckboxOnToggled(c : Pointer(Void), f : (Pointer(Void), Pointer(Void) -> Void), data : Pointer(Void))
    fun checkbox_checked = uiCheckboxChecked(c : Pointer(Void)) : LibC::Int
    fun checkbox_set_checked = uiCheckboxSetChecked(c : Pointer(Void), checked : LibC::Int)
    fun new_checkbox = uiNewCheckbox(text : Pointer(LibC::Char)) : Pointer(Void)
    alias Entry = Void
    fun entry_text = uiEntryText(e : Pointer(Void)) : Pointer(LibC::Char)
    fun entry_set_text = uiEntrySetText(e : Pointer(Void), text : Pointer(LibC::Char))
    fun entry_on_changed = uiEntryOnChanged(e : Pointer(Void), f : (Pointer(Void), Pointer(Void) -> Void), data : Pointer(Void))
    fun entry_read_only = uiEntryReadOnly(e : Pointer(Void)) : LibC::Int
    fun entry_set_read_only = uiEntrySetReadOnly(e : Pointer(Void), readonly : LibC::Int)
    fun new_entry = uiNewEntry : Pointer(Void)
    fun new_password_entry = uiNewPasswordEntry : Pointer(Void)
    fun new_search_entry = uiNewSearchEntry : Pointer(Void)
    alias Label = Void
    fun label_text = uiLabelText(l : Pointer(Void)) : Pointer(LibC::Char)
    fun label_set_text = uiLabelSetText(l : Pointer(Void), text : Pointer(LibC::Char))
    fun new_label = uiNewLabel(text : Pointer(LibC::Char)) : Pointer(Void)
    alias Tab = Void
    fun tab_append = uiTabAppend(t : Pointer(Void), name : Pointer(LibC::Char), c : Pointer(Void))
    fun tab_insert_at = uiTabInsertAt(t : Pointer(Void), name : Pointer(LibC::Char), index : LibC::Int, c : Pointer(Void))
    fun tab_delete = uiTabDelete(t : Pointer(Void), index : LibC::Int)
    fun tab_num_pages = uiTabNumPages(t : Pointer(Void)) : LibC::Int
    fun tab_margined = uiTabMargined(t : Pointer(Void), index : LibC::Int) : LibC::Int
    fun tab_set_margined = uiTabSetMargined(t : Pointer(Void), index : LibC::Int, margined : LibC::Int)
    fun new_tab = uiNewTab : Pointer(Void)
    alias Group = Void
    fun group_title = uiGroupTitle(g : Pointer(Void)) : Pointer(LibC::Char)
    fun group_set_title = uiGroupSetTitle(g : Pointer(Void), title : Pointer(LibC::Char))
    fun group_set_child = uiGroupSetChild(g : Pointer(Void), c : Pointer(Void))
    fun group_margined = uiGroupMargined(g : Pointer(Void)) : LibC::Int
    fun group_set_margined = uiGroupSetMargined(g : Pointer(Void), margined : LibC::Int)
    fun new_group = uiNewGroup(title : Pointer(LibC::Char)) : Pointer(Void)
    alias Spinbox = Void
    fun spinbox_value = uiSpinboxValue(s : Pointer(Void)) : LibC::Int
    fun spinbox_set_value = uiSpinboxSetValue(s : Pointer(Void), value : LibC::Int)
    fun spinbox_on_changed = uiSpinboxOnChanged(s : Pointer(Void), f : (Pointer(Void), Pointer(Void) -> Void), data : Pointer(Void))
    fun new_spinbox = uiNewSpinbox(min : LibC::Int, max : LibC::Int) : Pointer(Void)
    alias Slider = Void
    fun slider_value = uiSliderValue(s : Pointer(Void)) : LibC::Int
    fun slider_set_value = uiSliderSetValue(s : Pointer(Void), value : LibC::Int)
    fun slider_has_tool_tip = uiSliderHasToolTip(s : Pointer(Void)) : LibC::Int
    fun slider_set_has_tool_tip = uiSliderSetHasToolTip(s : Pointer(Void), has_tool_tip : LibC::Int)
    fun slider_on_changed = uiSliderOnChanged(s : Pointer(Void), f : (Pointer(Void), Pointer(Void) -> Void), data : Pointer(Void))
    fun slider_on_released = uiSliderOnReleased(s : Pointer(Void), f : (Pointer(Void), Pointer(Void) -> Void), data : Pointer(Void))
    fun slider_set_range = uiSliderSetRange(s : Pointer(Void), min : LibC::Int, max : LibC::Int)
    fun new_slider = uiNewSlider(min : LibC::Int, max : LibC::Int) : Pointer(Void)
    alias ProgressBar = Void
    fun progress_bar_value = uiProgressBarValue(p : Pointer(Void)) : LibC::Int
    fun progress_bar_set_value = uiProgressBarSetValue(p : Pointer(Void), n : LibC::Int)
    fun new_progress_bar = uiNewProgressBar : Pointer(Void)
    alias Separator = Void
    fun new_horizontal_separator = uiNewHorizontalSeparator : Pointer(Void)
    fun new_vertical_separator = uiNewVerticalSeparator : Pointer(Void)
    alias Combobox = Void
    fun combobox_append = uiComboboxAppend(c : Pointer(Void), text : Pointer(LibC::Char))
    fun combobox_insert_at = uiComboboxInsertAt(c : Pointer(Void), index : LibC::Int, text : Pointer(LibC::Char))
    fun combobox_delete = uiComboboxDelete(c : Pointer(Void), index : LibC::Int)
    fun combobox_clear = uiComboboxClear(c : Pointer(Void))
    fun combobox_num_items = uiComboboxNumItems(c : Pointer(Void)) : LibC::Int
    fun combobox_selected = uiComboboxSelected(c : Pointer(Void)) : LibC::Int
    fun combobox_set_selected = uiComboboxSetSelected(c : Pointer(Void), index : LibC::Int)
    fun combobox_on_selected = uiComboboxOnSelected(c : Pointer(Void), f : (Pointer(Void), Pointer(Void) -> Void), data : Pointer(Void))
    fun new_combobox = uiNewCombobox : Pointer(Void)
    alias EditableCombobox = Void
    fun editable_combobox_append = uiEditableComboboxAppend(c : Pointer(Void), text : Pointer(LibC::Char))
    fun editable_combobox_text = uiEditableComboboxText(c : Pointer(Void)) : Pointer(LibC::Char)
    fun editable_combobox_set_text = uiEditableComboboxSetText(c : Pointer(Void), text : Pointer(LibC::Char))
    fun editable_combobox_on_changed = uiEditableComboboxOnChanged(c : Pointer(Void), f : (Pointer(Void), Pointer(Void) -> Void), data : Pointer(Void))
    fun new_editable_combobox = uiNewEditableCombobox : Pointer(Void)
    alias RadioButtons = Void
    fun radio_buttons_append = uiRadioButtonsAppend(r : Pointer(Void), text : Pointer(LibC::Char))
    fun radio_buttons_selected = uiRadioButtonsSelected(r : Pointer(Void)) : LibC::Int
    fun radio_buttons_set_selected = uiRadioButtonsSetSelected(r : Pointer(Void), index : LibC::Int)
    fun radio_buttons_on_selected = uiRadioButtonsOnSelected(r : Pointer(Void), f : (Pointer(Void), Pointer(Void) -> Void), data : Pointer(Void))
    fun new_radio_buttons = uiNewRadioButtons : Pointer(Void)
    alias DateTimePicker = Void
    fun date_time_picker_time = uiDateTimePickerTime(d : Pointer(Void), time : Pointer(Tm))
    alias Tm = Void
    fun date_time_picker_set_time = uiDateTimePickerSetTime(d : Pointer(Void), time : Pointer(Tm))
    fun date_time_picker_on_changed = uiDateTimePickerOnChanged(d : Pointer(Void), f : (Pointer(Void), Pointer(Void) -> Void), data : Pointer(Void))
    fun new_date_time_picker = uiNewDateTimePicker : Pointer(Void)
    fun new_date_picker = uiNewDatePicker : Pointer(Void)
    fun new_time_picker = uiNewTimePicker : Pointer(Void)
    alias MultilineEntry = Void
    fun multiline_entry_text = uiMultilineEntryText(e : Pointer(Void)) : Pointer(LibC::Char)
    fun multiline_entry_set_text = uiMultilineEntrySetText(e : Pointer(Void), text : Pointer(LibC::Char))
    fun multiline_entry_append = uiMultilineEntryAppend(e : Pointer(Void), text : Pointer(LibC::Char))
    fun multiline_entry_on_changed = uiMultilineEntryOnChanged(e : Pointer(Void), f : (Pointer(Void), Pointer(Void) -> Void), data : Pointer(Void))
    fun multiline_entry_read_only = uiMultilineEntryReadOnly(e : Pointer(Void)) : LibC::Int
    fun multiline_entry_set_read_only = uiMultilineEntrySetReadOnly(e : Pointer(Void), readonly : LibC::Int)
    fun new_multiline_entry = uiNewMultilineEntry : Pointer(Void)
    fun new_non_wrapping_multiline_entry = uiNewNonWrappingMultilineEntry : Pointer(Void)
    alias MenuItem = Void
